[package]
name = "dex_pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.4.4", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3"
teloxide = "0.13"
log = "0.4"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.12", features = ["native-tls", "json"] }
serde = "1.0.219"
serde_json = "1.0.140"
bs58 = "0.5.1"